redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - image: redis
        name: redis
      restartPolicy: Always
