ingress-ibmdomain-staging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-for-ibmdomain-http-and-https
spec:
  tls:
  - hosts:
    - stagingannotations.us-east.containers.appdomain.cloud
    secretName: stagingannotations
  rules:
  - host: stagingannotations.us-east.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: stagingannotations
          servicePort: 8080

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-test
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: helloweb-ip
#   labels:
#     app: hello
# spec:
#   backend:
#     serviceName: stagingannotations
#     servicePort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: stagingannotations
#   labels:
#     app: hello
# spec:
#   type: NodePort
#   selector:
#     app: hello
#     tier: web
#   ports:
#   - port: 8080
#     targetPort: 8080

# kubectl apply -f ingress-ibmdomain-staging.yml
# kubectl expose deployment/cloud-annotations-staging --type=NodePort --port=8080 --name=stagingannotations --target-port=8080
