ingress-ibmdomain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-for-ibmdomain-http-and-https
spec:
  tls:
  - hosts:
    -  testannotations.us-east.containers.appdomain.cloud
    secretName: testannotations
  rules:
  - host: testannotations.us-east.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 8080
